--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -3,6 +3,7 @@
   hosts: mattermost
   vars:
     mattermostip: 192.168.60.21
+    mattermostport: 8065
     ippostgres: 192.168.60.20
     dbname: mattermost
     dbuser: mattermost-user
@@ -11,4 +12,5 @@
   become : yes
   roles:
     #- postgresql
-    - mattermost
+    #- mattermost
+    - nginx
